feat: admin panel dashboard view